hphp/hack/test/typecheck/yield_send4.php.exp
File "yield_send4.php", line 7, characters 5-6:
Invalid argument (Typing[4110])
File "yield_send4.php", line 3, characters 13-16:
Expected bool
File "yield_send4.php", line 5, characters 39-41:
But got int
File "yield_send4.php", line 5, characters 39-41:
Considering that this type argument is contravariant with respect to Generator
